--- a/src/modules/Citizenship/style/nav.less
+++ b/src/modules/Citizenship/style/nav.less
@@ -10,6 +10,7 @@
 
 // Outer navigation wrapper
 .navigation {
+    width: 100%;
     height: @nav-height;
     background-color: @nav-background;
     border-bottom: @nav-border-bottom;
@@ -43,6 +44,7 @@
       list-style: none;
       margin: 0;
       padding: 0;
+      background-color: rgba(28, 46, 70, 0.65);
       li {
         float: left;
         position: relative;
@@ -65,7 +67,7 @@
         } // Dropdown list
         ul li {
           min-width: 190px;
-          background-color: rgba(28, 46, 70, 0.65);
+          // background-color: rgba(28, 46, 70, 0.65);
           a {
             padding: 15px;
             line-height: 20px;
@@ -80,7 +82,13 @@
     position: absolute;
     // display: none;
     z-index: 1;
-    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 0 0 1px rgba(91, 118, 155, .34);
+    transition: opacity 200ms ease, box-shadow 200ms ease;
+  }
+  .nav-dropdown:hover {
+    border-color: #5b769b;
+    box-shadow: inset 0 0 0 1px #5b769b;
+    opacity: 1;
   }
 
   /* Mobile navigation */
@@ -91,7 +99,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    background: @nav-background;
+    // background: @nav-background;
     height: @nav-height;
     width: @nav-height;
   }
@@ -103,7 +111,7 @@
     }
     nav {
       width: 100%;
-      padding: @nav-height 0 15px;
+      padding: @nav-height 0 0px;
       ul {
         // display: none;
         li {
