--- a/src/modules/Citizenship/style/stars.sass
+++ b/src/modules/Citizenship/style/stars.sass
@@ -6,58 +6,56 @@
 
   @return unquote($value)
 
-$shadows-small:  multiple-box-shadow(350)
-$shadows-medium: multiple-box-shadow(100)
-$shadows-big:    multiple-box-shadow(50)
-
-.home-page
-  height: 100rem
-  background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%)
-  overflow: hidden
+$shadows-small:  multiple-box-shadow(150)
+$shadows-medium: multiple-box-shadow(50)
+$shadows-big:    multiple-box-shadow(25)
     
 .star-small
+  position: absolute
   width: 1px
   height: 1px
-  background: transparent
+  background: #1c2e46
   box-shadow: $shadows-small
   animation			: animStar 50s linear infinite
     
   &:after
     content: " "
     position: absolute
-    top: 2000px
+    top: 1000px
     width: 1px
     height: 1px
     background: transparent
     box-shadow: $shadows-small
     
 .star-medium
+  position: absolute
   width: 2px
   height: 2px
-  background: transparent
+  background: #1c2e46
   box-shadow: $shadows-medium
   animation			: animStar 100s linear infinite
     
   &:after
     content: " "
     position: absolute
-    top: 2000px
+    top: 1000px
     width: 2px
     height: 2px
     background: transparent
     box-shadow: $shadows-medium
     
 .star-big
+  position: absolute
   width: 3px
   height: 3px
-  background: transparent
+  background: #1c2e46
   box-shadow: $shadows-big
   animation			: animStar 150s linear infinite
     
   &:after
     content: " "
     position: absolute
-    top: 2000px
+    top: 1000px
     width: 3px
     height: 3px
     background: transparent
@@ -68,14 +66,12 @@ $shadows-big:    multiple-box-shadow(50)
   top: 50%
   left: 0
   right: 0
-  
   color: #FFF
   text-align: center
   font-family: 'lato',sans-serif
   font-weight: 300
   font-size: 40px
   letter-spacing: 10px
-  
   margin-top: -60px
   padding-left: 10px
   
