change mdoule name

--- a/src/modules/Citizen/style/layout.less
+++ b/src/modules/Citizen/style/layout.less
@@ -13,7 +13,9 @@
     align-items: center;
     color: chocolate;
   }
-
+  .header {
+    background-color:rgba(#B2D6FF,@alpha)
+  }
   .menu {
       background-color: rgba(#5995da, @alpha);
       height: 80px;
