--- a/src/modules/Citizen/style/nav.less
+++ b/src/modules/Citizen/style/nav.less
@@ -10,10 +10,12 @@
 
 // Outer navigation wrapper
 .navigation {
+    position: relative;
     width: 100%;
     height: @nav-height;
     background-color: @nav-background;
     border-bottom: @nav-border-bottom;
+    z-index: 100;
   }
 
   // Logo and branding
