--- a/src/modules/Citizen/style/layout.less
+++ b/src/modules/Citizen/style/layout.less
@@ -59,10 +59,10 @@
     // background-color: rgba(#C8C6FA, @alpha);
   }
   
-  .footer{
-    // height: 400px;
-    // background-color: rgba(#d69a18, @alpha);
-  }
+  // .footer{
+  //   height: 400px;
+  //   background-color: rgba(#d69a18, @alpha);
+  // }
 
   /* Mobile Styles */
   @media only screen and (max-width: 400px) {
