--- a/src/views/Citizen/style/layout.less
+++ b/src/views/Citizen/style/layout.less
@@ -1,124 +1,64 @@
 @alpha:0.4;
 
-.page{
-    width: 100%;
+.section {
+  width: 100%;
+  // height: 300px;
+  color: chocolate;
+  .flex_center{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
-  .section {
-    width: 100%;
-    // height: 300px;
-    color: chocolate;
-    .flex_center{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-  .header {
-    position: relative;
-    height: 500px;
-    background-color:rgba(#B2D6FF,@alpha)
-  }
-  .menu {
-      background-color: rgba(#5995da, @alpha);
-      height: 80px;
-  }
-  .solar-system{
-    height: 600px;
-    background-color: rgba(#6b7a62, @alpha);
-  }
-  .content {
-    background-color: rgba(#2c93c4, @alpha);
-    height: 600px;
-  }
+}
+.header {
+  position: relative;
+  height: 55vh;
+  background-color:rgba(#B2D6FF,@alpha)
+}
+.menu {
+    background-color: rgba(#5995da, @alpha);
+    height: 80px;
+}
 
-  .city-news {
-    // height: 500px;
-    font-family: sans-serif;
-    max-width: 1140px;
-    margin: 5px auto;
-    position: relative;
-    margin-bottom: 20px;
-    // background-color: rgba(#D6E9FE, @alpha);
-  }
+.city-news {
+  // height: 500px;
+  font-family: sans-serif;
+  max-width: 1140px;
+  margin: 5px auto;
+  position: relative;
+  margin-bottom: 20px;
+  // background-color: rgba(#D6E9FE, @alpha);
+}
 
-  .feature-1 {
-    height: 420px;
-    // background-color: rgba(#F5CF8E, @alpha);
+.feature-box{
+  width: 100%;
+  display: flex;
+  justify-content:center;
+  padding: 2%;
+  .feature{
+    width: 30%;
   }
+}
 
-  .feature-calendar {
-    height: 420px;
-    overflow: hidden;
-    // background-color: rgba(#F09A9D, @alpha);
-  }
+.content {
+  background-color: rgba(#2c93c4, @alpha);
+  height: 600px;
+}
+.about {
+  background-color: #77c8d3; /* Blue */
+}
 
-  .feature-stock-chart {
-    height: 420px;
-    // background-color: rgba(#C8C6FA, @alpha);
-  }
-  
-  // .footer{
-  //   height: 400px;
-  //   background-color: rgba(#d69a18, @alpha);
-  // }
-
-  /* Mobile Styles */
-  @media only screen and (max-width: 400px) {
-    .about {
-      background-color: #F09A9D; /* Red */
-    }
-  }
-
-  /* Tablet Styles */
-  @media only screen and (min-width: 401px) and (max-width: 960px) {
-    .about {
-      background-color: #F5CF8E; /* Yellow */
-    }
-    .feature-1,
-    .feature-calendar,
-    .feature-stock-chart {
-      width: 50%;
-    }
-  }
-
-  /* Desktop Styles */
-  @media only screen and (min-width: 961px) {
-    .about {
-      background-color: #77c8d3; /* Blue */
-    }
-    .page {
-    //   width: 1280px;
-      margin: 0 auto;
-    }
-    .feature-1,
-    .feature-calendar,
-    .feature-stock-chart {
-      width: 33.3%;
-      margin-top: 2%;
-      margin-bottom: 2%;
-      padding-left: 2%;
-      padding-right: 2%;
-    }
-    .header {
-      height: 600px;
-    }
-    // 分割线
-    .news-board{
-      order: 1;
-    }
-    // 具体新闻
-    .city-news{
-      order: 2;
-    }
-    .solar-system{
-      order: 3;
-    }
-    .content {
-      order: 4;
-    }
-    .footer{
-      order: 10;
-    }
-  }
+// 分割线
+.news-board{
+  order: 1;
+}
+// 具体新闻
+.city-news{
+  order: 2;
+}
+.content {
+  order: 4;
+}
+.footer{
+  order: 10;
+}
